# reservoir-rs

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs  prelude.rs  readout.rs  reservoir.rs  trainer.rs  traits.rs  types.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/dense/: Cargo.toml
crates/dense/examples/: hello_esn.rs  mg_esn.rs
crates/dense/src/: esn.rs  float.rs  lib.rs  readout.rs  reservoir.rs  trainer.rs
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs
crates/train/: Cargo.toml
crates/train/examples/: sample_esn.rs
crates/train/src/: esn.rs  float.rs  input.rs  lib.rs  metrics.rs
crates/train/src/data/: mackey_glass.rs  mod.rs
crates/train/src/readout/: mod.rs  ridge.rs
crates/train/src/reservoir/: dense.rs  mod.rs
crates/train/src/trainer/: mod.rs  ridge.rs
