[package]
name    = "reservoir-dense"
version = "0.1.0"
edition = "2021"

[dependencies]
reservoir-core = { path = "../core", default-features = false }
reservoir-data = { path = "../data" }
reservoir-eval = { path = "../eval" }
nalgebra = { version = "0.33.2", features=["rand"] }
rand = "0.8"
num-traits = "0.2.19"

[features]
default = []
